# FastAPI

./: .gitignore  README.md
Projects/Blog App/: .env  pyproject.toml  test.db
Projects/Blog App/app/: app.py  db.py  schemas.py
Projects/Task Manager App/: database.py  main.py  pyproject.toml  schemas.py  sqlite.db
Projects/Todo App/: database.py  main.py  models.py  pyproject.toml  router.py  schemas.py  todo.db
