[project]
name = "blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "fastapi[standard]>=0.135.1",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
]
